# HighPerformanceComputing

./: .gitignore
Cpp_Refresher/: CMakeLists.txt  main.cpp  student.cpp  student.hpp
Homework_1/: main_1.cpp  main_2  main_2.cpp
Homework_2/: main  main.cpp  prompts.txt  run_timings.py
Homework_3/: Prompts.txt  main.cpp
Homework_4/: main.cpp
Homework_5_1/: .gitignore  Notes.txt  Prompts.txt  Read_Image.ipynb  device_query  gc.raw  main.cu
Homework_5_2/: Display_image.ipynb  device_query  main.cu
